examples/compiler_errors/header_counts/WarningOnly.flx
module WarningOnly {
    type MaybeInt = SomeInt(Int) | NoneInt
}
